--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+body{
+    margin: 30px;
+    font-family: Roboto, sans-serif;
+}
+
+main{
+    margin: ;
+}
+
+
 .ultimanot{
     border-bottom: 1px solid #d5d5d5;
     align-items: center;
@@ -12,10 +22,13 @@
 .ultimanot a{
     text-decoration: none;
     color: inherit;
+    margin-left: 64px;
+
 }
 
 h1{
     color: rgb(255, 102, 0);
+    margin-left: 30rem;
 }
 
 
@@ -28,3 +41,27 @@ footer{
     color: white; 
   
   }
+
+
+  .sectionnav-container {
+  
+    border: 1px solid #d5d5d5;
+    border-right: none;
+    border-left: none;;
+
+    padding: 0 16px;
+    
+}
+
+
+.sectionnav-container a{
+ 
+    color: #1f1f1f;
+    font-size: 16px;
+    font-weight: 500;
+    height: 100%;
+    letter-spacing: 0;
+    white-space: nowrap;
+    text-decoration: none;
+    margin-left: 40px;
+}
